--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -298,9 +298,9 @@
   :deck: "Alchemist"
   :title: ""
   :type: "Reaction"
-  :icon: ""
-  :border_color: ""
-  :line1: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
+  :line1: "TODO~"
   :line2: ""
   :line3: ""
   :line4: ""
@@ -310,8 +310,8 @@
   :deck: "Alchemist"
   :title: "Contaminate"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Deal 1 damage."
   :line2: "For the rest of this <b>Round</b>,"
   :line3: "increase all damage done to the"
@@ -322,8 +322,8 @@
   :deck: "Alchemist"
   :title: "Heal"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Restore 3 <b>Health</b> to any player."
   :line2: ""
   :line3: "<b>Combo</b>: <i>Envigorate</i>"
@@ -335,8 +335,8 @@
   :deck: "Mauler"
   :title: "Crush"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Deal 4 damage."
   :line2: ""
   :line3: "<b>Combo</b>: <i>Pulverize</i>"
@@ -347,8 +347,8 @@
   :deck: "Mauler"
   :title: "Endure"
   :type: "Reaction"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Prevent up to 3 damage to <i>you</i>."
   :line2: ""
   :line3: "<b>Combo</b>: <i>Absorb</i>"
@@ -359,21 +359,21 @@
   :deck: "Mauler"
   :title: "Focus" # Gather
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Draw a card."
   :line2: "Restore 1 <b>Health</b> to you."
-  :line3: "Remove 1 status effect from you."
+  :line3: "Remove 1 <b>Status</b> from you."
   :line4: "Gain <b>Inspiration</b>."
-  :line5: "Remove this card from the game."
-  :line6: "You may take another <b>Action</b>."
+  :line5: "Remove this card"
+  :line6: "from the game."
 # Jackknife
 -
   :deck: "Jackknife"
   :title: "Fling"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Deal 3 damage to up to two"
   :line2: "different enemies that"
   :line3: "you are not engaged with."
@@ -384,20 +384,20 @@
   :deck: "Jackknife"
   :title: "Pierce"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Deal 1 damage."
   :line2: "Draw a card."
   :line3: "You may take another <b>Action</b>."
-  :line5: "<b>Combo</b>: <i>Rend</i>"
-  :line6: "For the rest of the round, increase"
-  :line4: "ALL damage done to the target by 2."
+  :line4: "<b>Combo</b>: <i>Rend</i>"
+  :line5: "TODO~"
+  :line6: ""
 -
   :deck: "Jackknife"
   :title: "Reposition"
   :type: "Reaction"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Play when <i>you</i> are attacked"
   :line2: "to draw 2 cards."
   :line3: ""
@@ -409,23 +409,23 @@
   :deck: "Illusionist"
   :title: "Terrorize"
   :type: "Action"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Deal 3 damage."
   :line2: ""
   :line3: "You may swap the target with"
   :line4: "the top card of the enemy"
-  :line5: "deck. If you do, the new"
-  :line6: "enemy keeps the HP of the target."
+  :line5: "deck. Do not reset the"
+  :line6: "enemy HP."
 -
   :deck: "Illusionist"
   :title: "Charm"
   :type: "Reaction"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Prevent up to 4 damage to you"
-  :line2: "from an enemy you are engaged with."
-  :line3: ""
+  :line2: "from an enemy you are"
+  :line3: "engaged with."
   :line4: "<b>Combo</b>: <i>Control</i>"
   :line5: "Deal all damage you prevented"
   :line6: "to an enemy."
@@ -433,11 +433,11 @@
   :deck: "Illusionist"
   :title: "Duplicate"
   :type: "???"
-  :icon: ""
-  :border_color: ""
+  :icon: "battle-axe" # TODO
+  :border_color: "#000"
   :line1: "Copy a card that was"
   :line2: "played this <b>Round</b>."
   :line3: "<i>OR</i>"
-  :line4: "Trigger the <b>Combo<b> of"
-  :line5: "a card that was played"
-  :line6: "this <b>Round</b>."
+  :line4: "Trigger the <b>Combo</b> of"
+  :line5: "a card that was just played."
+  :line6: ""
