add new cards and refactor old ones!

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -29,11 +29,11 @@
   :icon: "dragon-orb"
   :border_color: "#b95"
   :line1: "<i>Free Action</i> - 3 Charges"
-  :line2: ""
-  :line3: "Look at the top five cards of"
-  :line4: "one of your decks and put"
-  :line5: "them back in any order."
-  :line6: ""
+  :line2: "Look at the top five cards of"
+  :line3: "one of your decks. You may"
+  :line4: "discard any number of them"
+  :line5: "and put the rest back"
+  :line6: "in any order."
 -
   :deck: "Artifact"
   :title: "Cloak of Recovery"
@@ -80,16 +80,16 @@
   :line2: "Refresh <i>any</i> player deck."
   :line3: "You and the owner of the deck"
   :line4: "may draw a card."
-  :line5: "<i>(You draw two cards if you</i>"
-  :line6: "<i>are the owner.)</i>"
+  :line5: "<i>(You may draw two cards if</i>"
+  :line6: "<i>you are the owner.)</i>"
 -
   :deck: "Artifact"
   :title: "Tome of Tactics"
   :type: "Artifact"
   :icon: "enlightenment"
   :border_color: "#b95"
-  :line1: "<i>Action</i> - <i>X</i> Charges"
-  :line2: "Draw <i>X</i> cards."
+  :line1: "<i>Action</i> - <b>X</b> Charges"
+  :line2: "<b>Draw X / 2</b>"
   :line3: "<i>Passive</i>"
   :line4: "When you refresh a deck, you"
   :line5: "may leave up to 5 cards in"
@@ -112,9 +112,9 @@
   :type: "Artifact"
   :icon: "battle-axe" # TODO
   :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 3 Charges"
-  :line2: ""
-  :line3: "You may give/take up to three"
-  :line4: "cards to/from other players."
-  :line5: "You must get permission before"
-  :line6: "taking a card."
+  :line1: "<i>Free Action</i> - 1 Charge"
+  :line2: "Give a card to another"
+  :line3: "player or take a card"
+  :line4: "from another player."
+  :line5: "(you must get permission)"
+  :line6: ""
