--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -1,160 +1,168 @@
-# Guardian
+## SET ONE
+
+# Guardian - RED
 -
   :deck: "Guardian"
   :title: "Strike"
   :type: "Action"
   :icon: "battle-axe"
   :border_color: "#b10"
-  :line1: "Deal 3 damage."
-  :line2: ""
-  :line3: "If you <i>Strike</i> an enemy who"
-  :line4: "damaged you this <b>Round</b>, deal"
-  :line5: "5 damage instead."
-  :line6: ""
+  :line1: "<b>Attack 3</b>"
+  :line2: "If you target an enemy who"
+  :line3: "attacked you this round,"
+  :line4: "add <b>+2 Attack</b>."
+  :line5: "<b>Combo</b>: <i>Cleave</i>"
+  :line6: "<b>Attack 3</b> (an adjacent enemy)."
 -
   :deck: "Guardian"
-  :title: "Block"
+  :title: "Defend"
   :type: "Reaction"
   :icon: "checked-shield"
   :border_color: "#b10"
-  :line1: "Prevent up to 2 damage from"
-  :line2: "<i>any</i> enemy attack."
-  :line3: ""
-  :line4: "If you <i>Block</i> a <b>Hunter</b> attack,"
-  :line5: "you are attacked instead,"
-  :line6: "and you gain <b>Inspiration</b>."
+  :line1: "Play when an enemy attacks."
+  :line2: "<b>Block 2</b>"
+  :line3: "If you are the target of"
+  :line4: "the attack, add <b>+1 Block</b>."
+  :line5: "If not, you may become"
+  :line6: "the target."
 -
   :deck: "Guardian"
   :title: "Bash"
   :type: "Action"
   :icon: "shield-bash"
   :border_color: "#b10"
-  :line1: "Stun an enemy you are"
+  :line1: "<b>Stun</b> an enemy you are"
   :line2: "engaged with."
   :line3: ""
-  :line4: "<b>Combo</b>: <i>Slash</i>"
-  :line5: "Deal 5 damage to that enemy."
+  :line4: "<b>Combo</b>: <i>Polish</i>"
+  :line5: "<b>Draw 2</b>"
   :line6: ""
-# Ranger
+
+# Bowmaster - BLACK
 -
-  :deck: "Ranger"
+  :deck: "Bowmaster"
   :title: "Shoot"
   :type: "Action"
   :icon: "high-shot"
   :border_color: "#ccc"
-  :line1: "Deal 3 damage."
+  :line1: "<b>Attack 3</b>"
   :line3: "If you've taken no damage"
-  :line4: "this <b>Round</b>, deal 5 damage"
-  :line6: "instead."
+  :line4: "this round, add <b>+2 Attack</b>."
+  :line6: ""
   :line5: "<b>Combo</b>: <i>Volley</i>"
   :line2: "Deal 2 damage to ALL enemies."
 -
-  :deck: "Ranger"
-  :title: "Evade"
-  :type: "Reaction"
+  :deck: "Bowmaster"
+  :title: "Dodge"
+  :type: "Free Action"
   :icon: "dodging"
   :border_color: "#ccc"
-  :line1: "Prevent up to 2 damage to <i>you</i>."
-  :line2: "<i>and/or</i>"
-  :line3: "Prevent 1 status effect from"
-  :line4: "being applied to <i>you</i>."
-  :line5: ""
-  :line6: ""
+  :line1: "<b>Block Self 2</b> and/or"
+  :line2: "prevent 1 status effect from"
+  :line3: "being applied to you."
+  :line4: "<b>Combo</b>: <i>Evade</i>"
+  :line5: "Prevent ALL damage and effects"
+  :line6: "to you from one source."
 -
-  :deck: "Ranger"
+  :deck: "Bowmaster"
   :title: "Hasten"
   :type: "Action"
   :icon: "wingfoot"
   :border_color: "#ccc"
-  :line1: "Draw 2 cards."
+  :line1: "<b>Draw 2</b>"
   :line2: "You may take another <b>Action</b>."
   :line3: ""
   :line4: "<i>You cannot Hasten more than</i>"
   :line5: "<i>once per Round.</i>"
   :line6: ""
-# Elementalist
+
+# Elementalist - BLUE
 -
   :deck: "Elementalist"
-  :title: "Burn"
+  :title: "Fire"
   :type: "Action"
   :icon: "flamer"
   :border_color: "#0ff"
-  :line1: "<b>Scorch</b> an enemy."
-  :line2: "Deal 3 damage to each enemy"
-  :line3: "for each <b>Scorch</b> on them."
+  :line1: "<b>Attack 3</b>"
+  :line2: "Increase the next <b>Attack</b> on"
+  :line3: "this enemy this round by 2."
   :line4: ""
-  :line5: "<i>Each enemy cannot be</i>"
-  :line6: "<i><b>Scorched</b> more than 3 times.</i>"
+  :line5: "<b>Combo</b>: <i>Flashfire</i>"
+  :line6: "<b>Draw 2</b>"
 -
   :deck: "Elementalist"
-  :title: "Freeze"
+  :title: "Frost"
   :type: "Action"
   :icon: "beveled-star"
   :border_color: "#0ff"
-  :line1: "Deal 3 damage and <b>Chill</b>"
-  :line2: "an enemy."
-  :line3: ""
-  :line4: "If you <i>Freeze</i> an enemy who"
-  :line5: "is already <b>Chilled</b>, <b>Stun</b> it."
-  :line6: ""
+  :line1: "<b>Attack 3</b>"
+  :line2: "You may ignore any <b>Hunter</b>"
+  :line3: "ability on this enemy"
+  :line4: "next round."
+  :line5: "<b>Combo</b>: <i>Freeze</i>"
+  :line6: "Add <b>Stun</b> to the attack."
 -
   :deck: "Elementalist"
   :title: "Shock"
-  :type: "Free Action"
+  :type: "Reaction"
   :icon: "electric"
   :border_color: "#0ff"
-  :line1: "Draw a card."
-  :line2: "Deal 2 damage to all"
-  :line3: "<b>Scorched</b> enemies."
-  :line4: "Prevent 2 damage from all"
-  :line5: "<b>Chilled</b> enemies <i>(if applicable)</i>."
-  :line6: ""
-# Tactician
+  :line1: "Play when you are attacked."
+  :line2: "<b>Block 1</b> and <b>Attack 3</b>"
+  :line3: "(target your attacker)."
+  :line4: "<b>Combo</b>: <i>Channel</i>"
+  :line5: "Charge thisother  card and"
+  :line6: "the card you played with it."
+
+# Tactician - GREEN
 -
   :deck: "Tactician"
-  :title: "Bolster"
+  :title: ""
   :type: "Action"
   :icon: "heart-plus"
   :border_color: "#492"
-  :line1: "Restore 2 <b>Health</b> to any player."
-  :line2: "Remove or duplicate 1 status effect"
-  :line3: "on any player."
   :line4: ""
-  :line5: "<i>You may choose a different</i>"
-  :line6: "<i>player for each effect.</i>"
+  :line1: ""
+  :line2: ""
+  :line3: "<b>Combo</b>: <i>Prepare</i>"
+  :line5: "You may refresh ANY"
+  :line6: "one player deck."
 -
   :deck: "Tactician"
   :title: "Inspire"
   :type: "Action"
   :icon: "team-upgrade"
   :border_color: "#492"
-  :line1: "All players draw a card and"
-  :line2: "gain <b>Inspiration</b>."
+  :line1: "All players <b>Draw 1</b> and"
+  :line2: "<b>Restore Self 1</b>"
   :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Rally</i>"
+  :line5: "You or an ally may take an"
+  :line6: "extra turn this round."
 -
   :deck: "Tactician"
   :title: "Coordinate"
   :type: "Reaction"
   :icon: "explosive-meeting"
   :border_color: "#492"
-  :line1: "Play when an ally deals 5"
-  :line2: "or more damage in a single"
-  :line3: "hit to deal 5 damage."
-  :line4: ""
-  :line5: "<i>You may target a different</i>"
-  :line6: "<i>enemy than your ally.</i>"
-# Brawler
+  :line1: "Play when an ally attacks."
+  :line2: "<b>Attack 3</b>"
+  :line3: "(target the same enemy)"
+  :line4: "If another ally attacked"
+  :line5: "the target this round,"
+  :line6: "increase the <b>Attack</b> by 2."
+
+## SET TWO
+
+# Brawler - RED
 -
   :deck: "Brawler"
   :title: "Tackle"
   :type: "Action"
   :icon: "charging-bull"
   :border_color: "#f31"
-  :line1: "Deal 6 damage."
-  :line2: "Take 1 damage."
+  :line1: "<b>Attack 6</b>"
+  :line2: "You suffer 1 damage."
   :line3: ""
   :line4: "<b>Combo</b>: <i>Takedown</i>"
   :line5: "<b>Stun</b> the target."
@@ -166,10 +174,10 @@
   :icon: "punch-blast"
   :border_color: "#f31"
   :line1: "<i>Multi-target</i>"
-  :line2: "Deal 3 damage."
+  :line2: "<b>Attack 3</b>"
   :line3: ""
-  :line4: "<b>Mill</b> up to 3 cards to deal 1"
-  :line5: "more damage per card."
+  :line4: "<b>Mill</b> up to 3 cards to"
+  :line5: "add <b>+1 Attack</b> per card."
   :line6: ""
 -
   :deck: "Brawler"
@@ -177,37 +185,40 @@
   :type: "Reaction"
   :icon: "thrust-bend"
   :border_color: "#f31"
-  :line1: "Play when <i>you</i> are attacked to"
-  :line2: "deal 2 damage to your"
-  :line3: "attacker and draw a card."
-  :line4: ""
-  :line5: "If this damage defeats them,"
-  :line6: "they deal no damage to you."
-# Shadow
+  :line1: "Play when you are attacked."
+  :line2: "<b>Attack 2</b>"
+  :line3: "(target your attacker)"
+  :line4: "<b>Draw 1</b>"
+  :line5: "If this damother age defeats the"
+  :line6: ", they deal no damage to you."
+
+# Shadow - BLACK
 -
   :deck: "Shadow"
   :title: "Drain"
   :type: "Action"
   :icon: "snake-tongue"
   :border_color: "#666"
-  :line1: "Deal 3 damage."
-  :line2: "Restore 1 <b>Health</b> to yourself."
-  :line3: "Draw a card."
+  :line1: "<b>Attack 3</b>"
+  :line2: "<b>Restore Self 1</b>"
+  :line3: "<b>Draw 1</b>"
   :line4: ""
-  :line5: ""
-  :line6: ""
+  :line5: "<b>Combo</b>: Syphon"
+  :line6: "<b>Restore Self 2</b>"
 -
   :deck: "Shadow"
   :title: "Misdirect"
   :type: "Reaction"
   :icon: "avoidance"
   :border_color: "#666"
-  :line1: "Prevent up to 2 damage from"
-  :line2: "<i>any</i> enemy attack and"
-  :line3: "deal 2 damge to a different"
-  :line4: "enemy."
+  :line1: "Play when you are attacked."
+  :line2: "<b>Block Self 2</b>"
+  :line3: "<b>Attack 2</b>"
+  :line4: "(target a different"
+  :line5: "enemy)"
+  :line6: other"
 -
-  :deck: "Shadow"
+  :deck" : "Shadow"
   :title: "Mimic"
   :type: "???"
   :icon: "two-shadows"
@@ -218,17 +229,18 @@
   :line4: ""
   :line5: ""
   :line6: ""
-# Arcanist
+
+# Arcanist - BLUE
 -
   :deck: "Arcanist"
   :title: "Blast"
   :type: "Action"
   :icon: "hypersonic-bolt"
   :border_color: "#02f"
-  :line1: "Deal 4 damage."
+  :line1: "<b>Attack 4</b>"
   :line2: ""
-  :line3: "<b>Combo</b>: <i>Energize</i>"
-  :line4: "Draw 2 cards."
+  :line3: "<b>Combo</b>: <i>Charge</i>"
+  :line4: "<b>Draw 2</b>"
   :line5: ""
   :line6: ""
 -
@@ -238,11 +250,11 @@
   :icon: "aura"
   :border_color: "#02f"
   :line1: "<i>Multi-target</i>"
-  :line2: "Prevent 1 damage."
+  :line2: "<b>Block 2</b>"
   :line3: ""
   :line4: "You may discard up to 2"
-  :line5: "cards to prevent up to 3 more"
-  :line6: "damage per card."
+  :line5: "cards to add <b>+2 Block</b>"
+  :line6: "per card."
 -
   :deck: "Arcanist"
   :title: "Unleash"
@@ -250,133 +262,100 @@
   :icon: "glowing-hands"
   :border_color: "#02f"
   :line1: "<i>Multi-target</i>"
-  :line2: "Deal 2 damage."
+  :line2: "<b>Attack 2</b>"
   :line3: ""
   :line4: "You may discard up to 2"
-  :line5: "cards to deal 3 more damage"
+  :line5: "cards to add <b>+3 Attack</b>"
   :line6: "per card."
-# Squire
+
+# Squire - GREEN
 -
   :deck: "Squire"
   :title: "Accompany"
   :type: "Reaction"
   :icon: "ages"
   :border_color: "#4d4"
-  :line1: "Play when an ally is attacked"
-  :line2: "to prevent 1 damage, deal 1"
-  :line3: "damage to the attacker, and"
-  :line4: "draw a card."
-  :line5: ""
-  :line6: ""
+  :line1: "Play when an ally is attacked."
+  :line2: "You may become the target."
+  :line3: "<b>Block 1</b>"
+  :line4: "<b>Draw 1</b>"
+  :line5: "<b>Attack 1</b>"
+  :line6: "(target the triggering enemy)"
 -
-  :deck: "Squire"
-  :title: "Fetch"
+  :deck: "Squirother"
+  :title: "e Fetch"
   :type: "Action"
   :icon: "rapidshare-arrow"
   :border_color: "#4d4"
-  :line1: "Restore 1 <b>Health</b> to each"
-  :line2: "player."
-  :line3: ""
-  :line4: "Each player may place 1 of their"
-  :line5: "discarded cards (other than"
-  :line6: "<i>Fetch</i>) on top of its deck."
+  :line1: "<b>Restore All 1</b>"
+  :line2: ""
+  :line3: "Each player may place 1 of their"
+  :line4: "discarded cards (other than"
+  :line5: "<i>Fetch</i>) on top of its deck."
+  :line6: ""
 -
   :deck: "Squire"
   :title: "Resupply"
   :type: "Action"
   :icon: "knapsack"
   :border_color: "#4d4"
-  :line1: "An ally draws 2 cards."
-  :line2: "You may take another <b>Action</b>."
-  :line3: ""
+  :line1: "Choose an ally."
+  :line2: "They draw 2 cards."
+  :line3: "You may take another <b>Action</b>."
   :line4: "<i>You cannot Resupply more than</i>"
   :line5: "<i>once per Round.</i>"
   :line6: ""
 
-# Alchemist
--
-  :deck: "Alchemist"
-  :title: ""
-  :type: "Reaction"
-  :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "TODO~"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
--
-  :deck: "Alchemist"
-  :title: "Contaminate"
-  :type: "Action"
-  :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Deal 1 damage."
-  :line2: "For the rest of this <b>Round</b>,"
-  :line3: "increase all damage done to the"
-  :line4: "target by 2."
-  :line5: ""
-  :line6: ""
--
-  :deck: "Alchemist"
-  :title: "Heal"
-  :type: "Action"
-  :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Restore 3 <b>Health</b> to any player."
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Envigorate</i>"
-  :line4: "That player draws 2 cards."
-  :line5: ""
-  :line6: ""
-# Mauler
+## SET THREE
+
+# Mauler - RED
 -
   :deck: "Mauler"
   :title: "Crush"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Deal 4 damage."
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Pulverize</i>"
-  :line4: "Deal 8 damage."
-  :line5: ""
+  :border_color: "#b10"
+  :line1: "<b>Attack 4</b>"
+  :line2: "This attack ignores <b>Block</b>."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Pulverize</i>"
+  :line5: "Add <b>+4 Attack</b>"
   :line6: ""
 -
   :deck: "Mauler"
   :title: "Endure"
   :type: "Reaction"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Prevent up to 3 damage to <i>you</i>."
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Absorb</i>"
-  :line4: "Draw 2 cards."
-  :line5: ""
-  :line6: ""
+  :border_color: "#b10"
+  :line1: "<b>Block Self 2</b>"
+  :line2: "If you have ≤ 5 HP,"
+  :line3: "add <b>+1 Block</b>."
+  :line4: ""
+  :line5: "<b>Combo</b>: <i>Absorb</i>"
+  :line6: "<b>Draw 2</b>"
 -
   :deck: "Mauler"
-  :title: "Focus" # Gather
-  :type: "Action"
+  :title: "Focus"
+  :type: "Free Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Draw a card."
-  :line2: "Restore 1 <b>Health</b> to you."
-  :line3: "Remove 1 <b>Status</b> from you."
-  :line4: "Gain <b>Inspiration</b>."
-  :line5: "Remove this card"
-  :line6: "from the game."
-# Jackknife
+  :border_color: "#b10"
+  :line1: "<b>Restore Self 1</b>"
+  :line2: "<b>Draw 1</b>"
+  :line3: "You may shuffle two of"
+  :line4: "your discarded cards"
+  :line5: "other than <i>Focus</i>"
+  :line6: "into their deck."
+
+# Jackknife - BLACK
 -
   :deck: "Jackknife"
   :title: "Fling"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Deal 3 damage to up to two"
-  :line2: "different enemies that"
-  :line3: "you are not engaged with."
+  :border_color: "#ccc"
+  :line1: ""
+  :line2: ""
+  :line3: ""
   :line4: ""
   :line5: ""
   :line6: ""
@@ -385,59 +364,138 @@
   :title: "Pierce"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Deal 1 damage."
-  :line2: "Draw a card."
+  :border_color: "#ccc"
+  :line1: "<b>Attack 1</b>"
+  :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
   :line4: "<b>Combo</b>: <i>Rend</i>"
-  :line5: "TODO~"
+  :line5: ""
   :line6: ""
 -
   :deck: "Jackknife"
   :title: "Reposition"
   :type: "Reaction"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Play when <i>you</i> are attacked"
-  :line2: "to draw 2 cards."
-  :line3: ""
-  :line4: "<b>Combo</b>: <i>Trip</i>"
-  :line5: "Stun your attacker after"
-  :line6: "the attack."
-# Illusionist
+  :border_color: "#ccc"
+  :line1: "Play when an enemy"
+  :line2: "engages with you."
+  :line3: "<b>Draw 2</b>"
+  :line4: ""
+  :line5: "<b>Combo</b>: <i>Trip</i>"
+  :line6: "<b>Stun</b> that enemy."
+
+# Illusionist - BLUE
 -
   :deck: "Illusionist"
-  :title: "Terrorize"
+  :title: "Fear"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Deal 3 damage."
-  :line2: ""
-  :line3: "You may swap the target with"
-  :line4: "the top card of the enemy"
-  :line5: "deck. Do not reset the"
-  :line6: "enemy HP."
+  :border_color: "#02f"
+  :line1: "<b>Attack 3</b>"
+  :line2: "If the target has ≤ 10 HP"
+  :line3: "Add <b>+2 Attack</b>."
+  :line4: "<b>Combo</b>: <i>Terrorize</i>"
+  :line5: "If the target has ≤ 5 HP"
+  :line6: "add <b>Stun</b> to the attack."
 -
   :deck: "Illusionist"
   :title: "Charm"
   :type: "Reaction"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
-  :line1: "Prevent up to 4 damage to you"
-  :line2: "from an enemy you are"
-  :line3: "engaged with."
-  :line4: "<b>Combo</b>: <i>Control</i>"
-  :line5: "Deal all damage you prevented"
-  :line6: "to an enemy."
+  :border_color: "#02f"
+  :line1: "Play when you are attacked."
+  :line2: "<b>Block Self 1</b>"
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Confuse</i>"
+  :line5: "Your attacker attacks"
+  :line6: "another enemy instead."
 -
   :deck: "Illusionist"
   :title: "Duplicate"
   :type: "???"
   :icon: "battle-axe" # TODO
-  :border_color: "#000"
+  :border_color: "#02f"
   :line1: "Copy a card that was"
-  :line2: "played this <b>Round</b>."
+  :line2: "played this round."
   :line3: "<i>OR</i>"
-  :line4: "Trigger the <b>Combo</b> of"
-  :line5: "a card that was just played."
-  :line6: ""
+  :line4: "Play when another player"
+  :line5: "plays a card to trigger its"
+  :line6: "<b>Combo</b> if they did not."
+
+# Apothecary
+-
+  :deck: "Apothecary"
+  :title: "Contaminate"
+  :type: "Action"
+  :icon: "battle-axe" # TODO
+  :border_color: "#4d4"
+  :line1: "Add <b>+4 Attack</b> to the"
+  :line2: "next attack this round."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Melt</i>"
+  :line5: "Remove all text from one"
+  :line6: "non-elite enemy."
+-
+  :deck: "Apothecary"
+  :title: "Heal"
+  :type: "Action"
+  :icon: "battle-axe" # TODO
+  :border_color: "#4d4"
+  :line1: "<b>Restore 3</b>"
+  :line2: "The target discards"
+  :line3: "a card."
+  :line4: ""
+  :line5: "<b>Combo</b>: <i>Envigorate</i>"
+  :line6: "The target may <b>Draw 2</b>."
+-
+  :deck: "Apothecary"
+  :title: "Mix"
+  :type: "Action"
+  :icon: "battle-axe" # TODO
+  :border_color: "#4d4"
+  :line1: "Discard a card."
+  :line2: "<b>Draw 2</b> <i>from other"
+  :line3: "players' decks</i>"
+  :line4: "You may take another <b>Action</b>."
+  :line5: "<i>You cannot Mix more than</i>"
+  :line6: "<i>once per Round.</i>"
+
+## SET FOUR
+
+# Artificer
+-
+  :deck: "Artificer"
+  :title: "Embue"
+  :type: "Action"
+  :icon: "battle-axe" # TODO
+  :border_color: "#02f"
+  :line1: "<b>Attack 2</b>,"
+  :line2: "You may <b>Charge</b> this card."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Accelerate</i>"
+  :line5: "<b>Draw 2</b> then <b>Charge</b> a"
+  :line6: "card from your hand."
+-
+  :deck: "Artificer"
+  :title: "Observe"
+  :type: "Reaction"
+  :icon: "battle-axe" # TODO
+  :border_color: "#02f"
+  :line1: "Play when you are attacked."
+  :line2: "<b>Block Self 1</b>"
+  :line3: "You may <b>Charge</b> this card."
+  :line4: "<b>Combo</b>: <i>Learn</i>"
+  :line5: "Gain your attacker's card"
+  :line6: "text this round."
+-
+  :deck: "Artificer"
+  :title: "Tinker"
+  :type: "Action"
+  :icon: "battle-axe" # TODO
+  :border_color: "#02f"
+  :line1: "<b>Restore Self 1</b>"
+  :line2: "You may swap your artifact"
+  :line3: "for an unused one."
+  :line4: ""
+  :line5: "<b>Combo</b>: Construct"
+  :line6: "Gain an unused artifact."
