--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -46,11 +46,11 @@
   :icon: "high-shot"
   :border_color: "#ccc"
   :line1: "<b>Attack 3</b>"
-  :line3: "If you've taken no damage"
-  :line4: "this round, add <b>+2 Attack</b>."
-  :line6: ""
+  :line2: "If you've taken no damage"
+  :line3: "this round, add <b>+2 Attack</b>."
+  :line4: ""
   :line5: "<b>Combo</b>: <i>Volley</i>"
-  :line2: "Deal 2 damage to ALL enemies."
+  :line6: "<b>Attack All 2</b>"
 -
   :deck: "Bowmaster"
   :title: "Dodge"
@@ -58,7 +58,7 @@
   :icon: "dodging"
   :border_color: "#ccc"
   :line1: "<b>Block Self 2</b> and/or"
-  :line2: "prevent 1 status effect from"
+  :line2: "Prevent 1 status effect from"
   :line3: "being applied to you."
   :line4: "<b>Combo</b>: <i>Evade</i>"
   :line5: "Prevent ALL damage and effects"
@@ -84,8 +84,8 @@
   :icon: "flamer"
   :border_color: "#0ff"
   :line1: "<b>Attack 3</b>"
-  :line2: "Increase the next <b>Attack</b> on"
-  :line3: "this enemy this round by 2."
+  :line2: "Give the next attack on"
+  :line3: "this enemy <b>+2 Attack</b>."
   :line4: ""
   :line5: "<b>Combo</b>: <i>Flashfire</i>"
   :line6: "<b>Draw 2</b>"
@@ -108,11 +108,11 @@
   :icon: "electric"
   :border_color: "#0ff"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b> and <b>Attack 3</b>"
+  :line2: "<b>Block 1</b> and <b>Attack 2</b>"
   :line3: "(target your attacker)."
   :line4: "<b>Combo</b>: <i>Channel</i>"
-  :line5: "Charge thisother  card and"
-  :line6: "the card you played with it."
+  :line5: "Charge this card and"
+  :line6: "the card you played it with."
 
 # Tactician - GREEN
 -
@@ -133,11 +133,11 @@
   :type: "Action"
   :icon: "team-upgrade"
   :border_color: "#492"
-  :line1: "All players <b>Draw 1</b> and"
+  :line1: "All players may <b>Draw 1</b> and"
   :line2: "<b>Restore Self 1</b>"
   :line3: ""
   :line4: "<b>Combo</b>: <i>Rally</i>"
-  :line5: "You or an ally may take an"
+  :line5: "Choose an ally to take an"
   :line6: "extra turn this round."
 -
   :deck: "Tactician"
@@ -150,7 +150,7 @@
   :line3: "(target the same enemy)"
   :line4: "If another ally attacked"
   :line5: "the target this round,"
-  :line6: "increase the <b>Attack</b> by 2."
+  :line6: "add <b>+2 Attack</b>."
 
 ## SET TWO
 
@@ -161,9 +161,9 @@
   :type: "Action"
   :icon: "charging-bull"
   :border_color: "#f31"
-  :line1: "<b>Attack 6</b>"
-  :line2: "You suffer 1 damage."
-  :line3: ""
+  :line1: "<b>Attack 5</b>"
+  :line2: "You suffer 1 damage. You may"
+  :line3: "gain <b>Fatigue</b> to add <b>+2 Attack</b>."
   :line4: "<b>Combo</b>: <i>Takedown</i>"
   :line5: "<b>Stun</b> the target."
   :line6: ""
@@ -174,10 +174,10 @@
   :icon: "punch-blast"
   :border_color: "#f31"
   :line1: "<i>Multi-target</i>"
-  :line2: "<b>Attack 3</b>"
-  :line3: ""
-  :line4: "<b>Mill</b> up to 3 cards to"
-  :line5: "add <b>+1 Attack</b> per card."
+  :line2: "<b>Attack 2</b>"
+  :line3: "<b>Mill</b> up to 3 cards to"
+  :line4: "add <b>+1 Attack</b> per card."
+  :line5: "<b>Combo</b>: TODO"
   :line6: ""
 -
   :deck: "Brawler"
@@ -186,11 +186,11 @@
   :icon: "thrust-bend"
   :border_color: "#f31"
   :line1: "Play when you are attacked."
-  :line2: "<b>Attack 2</b>"
-  :line3: "(target your attacker)"
-  :line4: "<b>Draw 1</b>"
-  :line5: "If this damother age defeats the"
-  :line6: ", they deal no damage to you."
+  :line2: "<b>Attack 2</b> (target your attacker)"
+  :line3: "<b>Draw 1</b>"
+  :line4: "If you draw another <i>Counter</i>,"
+  :line5: "you may play it immediately."
+  :line6: ""
 
 # Shadow - BLACK
 -
@@ -214,9 +214,9 @@
   :line1: "Play when you are attacked."
   :line2: "<b>Block Self 2</b>"
   :line3: "<b>Attack 2</b>"
-  :line4: "(target a different"
-  :line5: "enemy)"
-  :line6: other"
+  :line4: "(target a different enemy)"
+  :line5: ""
+  :line6: ""
 -
   :deck" : "Shadow"
   :title: "Mimic"
@@ -239,7 +239,7 @@
   :border_color: "#02f"
   :line1: "<b>Attack 4</b>"
   :line2: ""
-  :line3: "<b>Combo</b>: <i>Charge</i>"
+  :line3: "<b>Combo</b>: <i>Recharge</i>"
   :line4: "<b>Draw 2</b>"
   :line5: ""
   :line6: ""
@@ -249,9 +249,9 @@
   :type: "Reaction"
   :icon: "aura"
   :border_color: "#02f"
-  :line1: "<i>Multi-target</i>"
-  :line2: "<b>Block 2</b>"
-  :line3: ""
+  :line1: "Play when an enemy attacks."
+  :line2: "<i>Multi-target</i>"
+  :line3: "<b>Block 2</b>"
   :line4: "You may discard up to 2"
   :line5: "cards to add <b>+2 Block</b>"
   :line6: "per card."
@@ -283,7 +283,7 @@
   :line6: "(target the triggering enemy)"
 -
   :deck: "Squirother"
-  :title: "e Fetch"
+  :title: "Fetch"
   :type: "Action"
   :icon: "rapidshare-arrow"
   :border_color: "#4d4"
@@ -299,9 +299,9 @@
   :type: "Action"
   :icon: "knapsack"
   :border_color: "#4d4"
-  :line1: "Choose an ally."
-  :line2: "They draw 2 cards."
-  :line3: "You may take another <b>Action</b>."
+  :line1: "Choose an ally to <b>Draw 2</b>."
+  :line2: "You may take another <b>Action</b>."
+  :line3: ""
   :line4: "<i>You cannot Resupply more than</i>"
   :line5: "<i>once per Round.</i>"
   :line6: ""
@@ -328,11 +328,11 @@
   :icon: "battle-axe" # TODO
   :border_color: "#b10"
   :line1: "<b>Block Self 2</b>"
-  :line2: "If you have ≤ 5 HP,"
-  :line3: "add <b>+1 Block</b>."
-  :line4: ""
-  :line5: "<b>Combo</b>: <i>Absorb</i>"
-  :line6: "<b>Draw 2</b>"
+  :line2: "If you have ≤ 5 HP, add <b>+1 Block</b>."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Absorb</i>"
+  :line5: "<b>Draw 2</b>"
+  :line6: ""
 -
   :deck: "Mauler"
   :title: "Focus"
@@ -341,15 +341,15 @@
   :border_color: "#b10"
   :line1: "<b>Restore Self 1</b>"
   :line2: "<b>Draw 1</b>"
-  :line3: "You may shuffle two of"
-  :line4: "your discarded cards"
-  :line5: "other than <i>Focus</i>"
-  :line6: "into their deck."
+  :line3: "You may shuffle two of your"
+  :line4: "discarded cards other than"
+  :line5: "<i>Focus</i> into their deck."
+  :line6: ""
 
 # Jackknife - BLACK
 -
   :deck: "Jackknife"
-  :title: "Fling"
+  :title: "TODO"
   :type: "Action"
   :icon: "battle-axe" # TODO
   :border_color: "#ccc"
@@ -369,7 +369,7 @@
   :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
   :line4: "<b>Combo</b>: <i>Rend</i>"
-  :line5: ""
+  :line5: "TODO"
   :line6: ""
 -
   :deck: "Jackknife"
@@ -377,12 +377,12 @@
   :type: "Reaction"
   :icon: "battle-axe" # TODO
   :border_color: "#ccc"
-  :line1: "Play when an enemy"
-  :line2: "engages with you."
-  :line3: "<b>Draw 2</b>"
-  :line4: ""
-  :line5: "<b>Combo</b>: <i>Trip</i>"
-  :line6: "<b>Stun</b> that enemy."
+  :line1: "Play when an enemy engages with you."
+  :line2: "<b>Draw 2</b>"
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Trip</i>"
+  :line5: "<b>Stun</b> that enemy."
+  :line6: ""
 
 # Illusionist - BLUE
 -
@@ -395,7 +395,7 @@
   :line2: "If the target has ≤ 10 HP"
   :line3: "Add <b>+2 Attack</b>."
   :line4: "<b>Combo</b>: <i>Terrorize</i>"
-  :line5: "If the target has ≤ 5 HP"
+  :line5: "If the target has ≤ 10 HP"
   :line6: "add <b>Stun</b> to the attack."
 -
   :deck: "Illusionist"
@@ -407,12 +407,12 @@
   :line2: "<b>Block Self 1</b>"
   :line3: ""
   :line4: "<b>Combo</b>: <i>Confuse</i>"
-  :line5: "Your attacker attacks"
-  :line6: "another enemy instead."
+  :line5: "Your attacker attacks another"
+  :line6: "enemy instead."
 -
   :deck: "Illusionist"
   :title: "Duplicate"
-  :type: "???"
+  :type: ""
   :icon: "battle-axe" # TODO
   :border_color: "#02f"
   :line1: "Copy a card that was"
@@ -429,9 +429,9 @@
   :type: "Action"
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
-  :line1: "Add <b>+4 Attack</b> to the"
-  :line2: "next attack this round."
-  :line3: ""
+  :line1: "Add <b>+4 Attack</b> to the next"
+  :line2: "attack on target enemy"
+  :line3: "this round."
   :line4: "<b>Combo</b>: <i>Melt</i>"
   :line5: "Remove all text from one"
   :line6: "non-elite enemy."
@@ -442,11 +442,11 @@
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
   :line1: "<b>Restore 3</b>"
-  :line2: "The target discards"
-  :line3: "a card."
-  :line4: ""
-  :line5: "<b>Combo</b>: <i>Envigorate</i>"
-  :line6: "The target may <b>Draw 2</b>."
+  :line2: "The target discards a card."
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Envigorate</i>"
+  :line5: "The target may <b>Draw 2</b>."
+  :line6: ""
 -
   :deck: "Apothecary"
   :title: "Mix"
@@ -454,8 +454,8 @@
   :icon: "battle-axe" # TODO
   :border_color: "#4d4"
   :line1: "Discard a card."
-  :line2: "<b>Draw 2</b> <i>from other"
-  :line3: "players' decks</i>"
+  :line2: "<b>Draw 2</b> <i>from other</i>"
+  :line3: "<i>players' decks</i>"
   :line4: "You may take another <b>Action</b>."
   :line5: "<i>You cannot Mix more than</i>"
   :line6: "<i>once per Round.</i>"
