--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -33,10 +33,10 @@
   :border_color: "#b10"
   :line1: "<b>Stun</b> an enemy you are"
   :line2: "engaged with."
-  :line3: ""
-  :line4: "<b>Combo</b>: <i>Polish</i>"
-  :line5: "<b>Draw 2</b>"
-  :line6: ""
+  :line3: "<b>Combo</b>: <i>Polish</i>"
+  :line4: "You may add up to two"
+  :line5: "discarded <i>Defend</i> cards"
+  :line6: "to your hand."
 
 # Bowmaster - BLACK
 -
@@ -48,9 +48,9 @@
   :line1: "<b>Attack 3</b>"
   :line2: "If you've taken no damage"
   :line3: "this round, add <b>+2 Attack</b>."
-  :line4: ""
-  :line5: "<b>Combo</b>: <i>Volley</i>"
-  :line6: "<b>Attack All 2</b>"
+  :line4: "<b>Combo</b>: <i>Volley</i>"
+  :line5: "<b>Attack All 2</b>"
+  :line6: ""
 -
   :deck: "Bowmaster"
   :title: "Dodge"
@@ -71,9 +71,9 @@
   :border_color: "#ccc"
   :line1: "<b>Draw 2</b>"
   :line2: "You may take another <b>Action</b>."
-  :line3: ""
-  :line4: "<i>You cannot Hasten more than</i>"
-  :line5: "<i>once per Round.</i>"
+  :line3: "<i>once per round</i>"
+  :line4: ""
+  :line5: ""
   :line6: ""
 
 # Elementalist - BLUE
@@ -86,9 +86,9 @@
   :line1: "<b>Attack 3</b>"
   :line2: "Give the next attack on"
   :line3: "this enemy <b>+2 Attack</b>."
-  :line4: ""
-  :line5: "<b>Combo</b>: <i>Flashfire</i>"
-  :line6: "<b>Draw 2</b>"
+  :line4: "<b>Combo</b>: <i>Flashfire</i>"
+  :line5: "Add <b>+2 Attack</b> and <b>Draw 1</b>"
+  :line6: ""
 -
   :deck: "Elementalist"
   :title: "Frost"
@@ -97,10 +97,10 @@
   :border_color: "#0ff"
   :line1: "<b>Attack 3</b>"
   :line2: "You may ignore any <b>Hunter</b>"
-  :line3: "ability on this enemy"
-  :line4: "next round."
-  :line5: "<b>Combo</b>: <i>Freeze</i>"
-  :line6: "Add <b>Stun</b> to the attack."
+  :line3: "ability on this enemy next round."
+  :line4: "<b>Combo</b>: <i>Freeze</i>"
+  :line5: "<b>Stun</b> the target."
+  :line6: ""
 -
   :deck: "Elementalist"
   :title: "Shock"
@@ -117,25 +117,25 @@
 # Tactician - GREEN
 -
   :deck: "Tactician"
-  :title: ""
+  :title: "Bolster"
   :type: "Action"
   :icon: "heart-plus"
   :border_color: "#492"
-  :line4: ""
-  :line1: ""
-  :line2: ""
-  :line3: "<b>Combo</b>: <i>Prepare</i>"
-  :line5: "You may refresh ANY"
-  :line6: "one player deck."
+  :line1: "<b>Restore Ally 1</b> twice"
+  :line2: "Remove one negative status"
+  :line3: "effect from an ally."
+  :line4: "<b>Combo</b>: <i>Prepare</i>"
+  :line5: "Refresh ANY player deck."
+  :line6: ""
 -
   :deck: "Tactician"
   :title: "Inspire"
   :type: "Action"
   :icon: "team-upgrade"
   :border_color: "#492"
-  :line1: "All players may <b>Draw 1</b> and"
-  :line2: "<b>Restore Self 1</b>"
-  :line3: ""
+  :line1: "All allies may <b>Draw 1</b>"
+  :line2: "You may take another <b>Action</b>."
+  :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Rally</i>"
   :line5: "Choose an ally to take an"
   :line6: "extra turn this round."
@@ -162,23 +162,23 @@
   :icon: "charging-bull"
   :border_color: "#f31"
   :line1: "<b>Attack 5</b>"
-  :line2: "You suffer 1 damage. You may"
-  :line3: "gain <b>Fatigue</b> to add <b>+2 Attack</b>."
-  :line4: "<b>Combo</b>: <i>Takedown</i>"
-  :line5: "<b>Stun</b> the target."
-  :line6: ""
+  :line2: "You suffer 1 damage."
+  :line3: "You may gain <b>Fatigue</b> to"
+  :line4: "add <b>+2 Attack</b>."
+  :line5: "<b>Combo</b>: <i>Takedown</i>"
+  :line6: "<b>Stun</b> the target."
 -
   :deck: "Brawler"
   :title: "Flurry"
   :type: "Action"
   :icon: "punch-blast"
   :border_color: "#f31"
-  :line1: "<i>Multi-target</i>"
-  :line2: "<b>Attack 2</b>"
-  :line3: "<b>Mill</b> up to 3 cards to"
-  :line4: "add <b>+1 Attack</b> per card."
-  :line5: "<b>Combo</b>: TODO"
-  :line6: ""
+  :line1: "<b>Attack 2</b> <i>Multi-target</i>"
+  :line2: "<b>Mill</b> up to 3 cards to add"
+  :line3: "<b>+1 Attack</b> per card."
+  :line4: "<b>Combo</b>: TODO"
+  :line5: "<b>Mill</b> up to 2 more cards to"
+  :line6: "add <b>+2 Attack</b> per card."
 -
   :deck: "Brawler"
   :title: "Counter"
@@ -200,11 +200,11 @@
   :icon: "snake-tongue"
   :border_color: "#666"
   :line1: "<b>Attack 3</b>"
-  :line2: "<b>Restore Self 1</b>"
-  :line3: "<b>Draw 1</b>"
-  :line4: ""
-  :line5: "<b>Combo</b>: Syphon"
-  :line6: "<b>Restore Self 2</b>"
+  :line2: "<b>Draw 1</b>"
+  :line3: "<b>Combo</b>: Syphon"
+  :line4: "<b>Restore Self 2</b>"
+  :line5: ""
+  :line6: ""
 -
   :deck: "Shadow"
   :title: "Misdirect"
@@ -239,7 +239,7 @@
   :border_color: "#02f"
   :line1: "<b>Attack 4</b>"
   :line2: ""
-  :line3: "<b>Combo</b>: <i>Recharge</i>"
+  :line3: "<b>Combo</b>: <i>Channel</i>"
   :line4: "<b>Draw 2</b>"
   :line5: ""
   :line6: ""
@@ -250,23 +250,23 @@
   :icon: "aura"
   :border_color: "#02f"
   :line1: "Play when an enemy attacks."
-  :line2: "<i>Multi-target</i>"
-  :line3: "<b>Block 2</b>"
-  :line4: "You may discard up to 2"
-  :line5: "cards to add <b>+2 Block</b>"
-  :line6: "per card."
+  :line2: "<b>Block 2</b> <i>multi-target</i>"
+  :line3: "You may discard up to 2"
+  :line4: "cards to add <b>+2 Block</b>"
+  :line5: "per card."
+  :line6: ""
 -
   :deck: "Arcanist"
   :title: "Unleash"
   :type: "Action"
   :icon: "glowing-hands"
   :border_color: "#02f"
-  :line1: "<i>Multi-target</i>"
-  :line2: "<b>Attack 2</b>"
-  :line3: ""
-  :line4: "You may discard up to 2"
-  :line5: "cards to add <b>+3 Attack</b>"
-  :line6: "per card."
+  :line1: "<b>Attack 2</b> <i>multi-target</i>"
+  :line2: "You may discard up to 2 cards"
+  :line3: "to add <b>+3 Attack</b> per card."
+  :line4: "<b>Combo:</b> <i>Exhaust</i>"
+  :line5: "You may suffer 2 damage and"
+  :line6: "gain <b>Fatigue</b> to add <b>+5 Attack</b>"
 
 # Squire - GREEN
 -
@@ -301,9 +301,9 @@
   :border_color: "#4d4"
   :line1: "Choose an ally to <b>Draw 2</b>."
   :line2: "You may take another <b>Action</b>."
-  :line3: ""
-  :line4: "<i>You cannot Resupply more than</i>"
-  :line5: "<i>once per Round.</i>"
+  :line3: "<i>once per round</i>"
+  :line4: ""
+  :line5: ""
   :line6: ""
 
 ## SET THREE
@@ -377,7 +377,7 @@
   :type: "Reaction"
   :icon: "battle-axe" # TODO
   :border_color: "#ccc"
-  :line1: "Play when an enemy engages with you."
+  :line1: "Play when you engage an enemy."
   :line2: "<b>Draw 2</b>"
   :line3: ""
   :line4: "<b>Combo</b>: <i>Trip</i>"
@@ -462,7 +462,83 @@
 
 ## SET FOUR
 
-# Artificer
+# The Beast - RED
+-
+  :deck: "The Beast"
+  :title: "Swipe"
+  :type: "Action"
+  :icon: "triple-claws"
+  :border_color: "#b10"
+  :line1: "<b>Attack 4</b> or <b>Attack All 2</b>"
+  :line2: ""
+  :line3: "<b>Combo</b>: <i>Cross Slash</i>"
+  :line4: "<b>Attack 3</b> or <b>Attack All 1</b>"
+  :line5: ""
+  :line6: ""
+-
+  :deck: "The Beast"
+  :title: "Sniff"
+  :type: "Action"
+  :icon: "snout"
+  :border_color: "#b10"
+  :line1: "<b>Restore Self 2</b>"
+  :line2: "Look at the top card of ANY"
+  :line3: "deck (including enemy deck)."
+  :line4: "<b>Combo</b>: <i>Lick</i>"
+  :line5: "<b>Draw 2</b>"
+  :line6: ""
+-
+  :deck: "The Beast"
+  :title: "Glide"
+  :type: "Reaction"
+  :icon: "spiky-wing"
+  :border_color: "#b10"
+  :line1: "Play when you are attacked."
+  :line2: "<b>Block X</b> where X is half of the"
+  :line3: "attack's damage, rounded up."
+  :line4: "<b>Combo</b>: <i>Soar</i>"
+  :line5: "Prevent ALL incoming damage."
+  :line6: ""
+
+# Swarmkeeper - BLACK
+-
+  :deck: "Swarmkeeper"
+  :title: "Wasp / Sting"
+  :type: "Action"
+  :icon: "bee"
+  :border_color: "#ccc"
+  :line1: "<b>Attack 2</b>"
+  :line2: "Tuck this card under the target."
+  :line3: "At the start of each round,"
+  :line4: "that enemy suffers 2 damage."
+  :line5: "<b>Combo</b>: <i>Swarm</i>"
+  :line6: "<b>+3 Attack</b>"
+-
+  :deck: "Swarmkeeper"
+  :title: "Mosquito / Bite"
+  :type: "Action"
+  :icon: "cigale"
+  :border_color: "#ccc"
+  :line1: "<b>Attack 4</b>"
+  :line2: "<b>Restore Self 1</b>"
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Transfuse</i>"
+  :line5: "<b>Restore Ally 2</b>"
+  :line6: ""
+-
+  :deck: "Swarmkeeper"
+  :title: "Spider / Web"
+  :type: "Reaction"
+  :icon: "spider-web"
+  :border_color: "#ccc"
+  :line1: "Play when an enemy attacks."
+  :line2: "<b>Block 1</b>"
+  :line3: "Anyone may become the target."
+  :line4: "<b>Combo</i>: <i>Wrap</i>"
+  :line5: "<b>Stun</b> the triggering enemy"
+  :line6: "for this attack."
+
+# Artificer - BLUE
 -
   :deck: "Artificer"
   :title: "Embue"
@@ -496,6 +572,7 @@
   :line1: "<b>Restore Self 1</b>"
   :line2: "You may swap your artifact"
   :line3: "for an unused one."
-  :line4: ""
-  :line5: "<b>Combo</b>: Construct"
-  :line6: "Gain an unused artifact."
+  :line4: "<b>Combo</b>: Construct"
+  :line5: "Gain an unused artifact."
+  :line6: ""
+
